feat: implemented JS colour schemes for CSS variables

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Document</title>
 
 	<script src="./favouriteAnimals.js"></script>
+
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>Favourite Animals</h1>
@@ -18,5 +20,7 @@
 	<script>
 		createAnimalList();
 	</script>
+
+	<script src="./themeControl.js"></script>
 </body>
 </html>
